# HCPtoSAT

./: .gitignore  LICENSE  README.md
encoders/helga_multi/: helga.cxx
encoders/helga_multiPB/: CMakeLists.txt  VarManager.cxx  helga.cxx
encoders/helga_sequential/: CMakeLists.txt  helga.cxx
encoders/helga_sequentialPB/: CMakeLists.txt  VarManager.cxx  VarManager.h  helga.cxx
encoders/shared/: SatInterface.cxx  VarManager.cxx  VarManager.h  create_adjency_matrix.cxx  debug.cxx  process_result.cxx
graphs/: hc_4.col
pblib/: IncSimplePBConstraint.cpp  SimplePBConstraint.cpp  auxvarmanager.cpp  formula.h
pblib/BasicPBSolver/: BasicSATSolver.h
pblib/BasicPBSolver/minisat/minisat/core/: BasicSATSolver.cc  Solver.h  SolverTypes.h
pblib/BasicPBSolver/minisat/minisat/mtl/: Alg.h  Alloc.h  Heap.h  IntMap.h  Map.h  Rnd.h  Vec.h
pblib/BasicPBSolver/minisat/minisat/utils/: Options.cc  Options.h  ParseUtils.h  System.cc  System.h
solvers/lingeling/: configure.sh  ilingeling  ilingeling.c  lglcfg.h  lglcflags.h  lglddtrace  lglib.c  lglmain.c  lglmbt  lgloptl.h  lgluntrace  lingeling  makefile  mkconfig.sh  plingeling  plingeling.c  treengeling  treengeling.c
solvers/lingeling/sc14classify/: configure.sh  makefile.in  sc14classify.c  sc14classify.h  sc14classifycore.c
